# lecture_transcription_system

./: .env.template  .gitignore  README.md  docker-compose.yml
ai_transcription_worker/: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.flower  Makefile  docker-compose.yaml  pyproject.toml  pytest.ini
ai_transcription_worker/src/: api.py  celery_app.py  tasks.py
ai_transcription_worker/src/common/: controller.py  exceptions.py
ai_transcription_worker/src/common/db/: database.py  models.py  repository.py  service.py
ai_transcription_worker/src/common/open_ai/: repository.py
ai_transcription_worker/src/common/transcription/: repository.py
ai_transcription_worker/src/common/utils/: http.py
ai_transcription_worker/src/services/data_processing/: service.py
ai_transcription_worker/src/services/transcription_ai_service/: service.py
ai_transcription_worker/src/services/transcription_service/: service.py
ai_transcription_worker/tests/db/: test_repository.py
scheduler_api/: .env.template  .gitignore  Dockerfile  docker-compose.yml  init.sql  pyproject.toml
scheduler_api/app/: main.py  schemas.py  tasks.py
scheduler_api/app/celery_config/: celery_conf.py
scheduler_api/app/db/: database.py  models.py  repository.py  service.py
transcription_service/: .env.template.sh  .gitignore  pyproject.toml
transcription_service/api/: app.py
transcription_service/worker/: celery_app.py
transcription_service/worker/repository/: controller_repo.py  http.py
transcription_service/worker/tasks/: __init__.py  transcribe_task.py
transcription_service/worker/utils/: redis.py  transcription_manager.py
transcription_service_controller/: .env.template  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
transcription_service_controller/src/: config.py  http.py  logger.py  main.py  schemas.py  service.py
transcription_service_controller/src/db/: redis.py  repository.py
